--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -57,7 +57,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item Lord Haart's starting \textit{Estates} Ability is replaced with \textit{Scouting}.
   \item At the start of certain Rounds, players must send a \textbf{tranche} to their lieges. The tranche value is expressed in \svg{gold}, but may be partially or entirely paid in other resources using these exchange rates: 1 \svg{building_materials} equals 2 \svg{gold} and 1 \svg{valuables} equals 4 \svg{gold}, with no change given. In Alliance mode, allied players collectively pay a single tranche. Any player or team unable to pay loses the game immediately.
   \item The difficulty of all Fields on the \#C1 Tile is lowered by one Level (effectively making it a ``V-VI'' Tile).
-  \item Certain locations have special rules, typically allowing players to acquire \textbf{Resource Cards} -- refer to the table at the next page.
+  \item Certain locations have special rules, typically allowing players to acquire \textbf{Resource Cards} -- refer to the table on the next page.
   \item A Hero carrying the Grail Token is not protected by the \textit{Sanctuary} effect.
   \item If a Hero carrying the Grail Token surrenders or is defeated by an enemy Hero, they give the Token to the opponent.
   \item If a Hero carrying the Grail Token is defeated by a Neutral Army, the Grail token is placed on the Field where the Hero was defeated. Any Hero visiting this Filed takes the Token and loses all remaining \svg{movement}.
