--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -60,7 +60,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item Certain locations have special rules, typically allowing players to acquire \textbf{Resource Cards} -- refer to the table on the next page.
   \item A Hero carrying the Grail Token is not protected by the \textit{Sanctuary} effect.
   \item If a Hero carrying the Grail Token surrenders or is defeated by an enemy Hero, they give the Token to the opponent.
-  \item If a Hero carrying the Grail Token is defeated by a Neutral Army, the Grail token is placed on the Field where the Hero was defeated. Any Hero visiting this Filed takes the Token and loses all remaining \svg{movement}.
+  \item If a Hero carrying the Grail Token is defeated by a Neutral Army, the Grail Token is placed on the Field where the Hero was defeated. Any Hero visiting this Field takes the Token and loses all remaining \svg{movement}.
   \item When defeating an enemy Main Hero, the victorious player may, instead of taking \mbox{5 \svg{gold}}, choose and take one Artifact from the opponent's Discard Pile.
 \end{itemize}
 
