--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -76,7 +76,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \begin{itemize}
   \item Fail to pay a required \textbf{tranche}.
   \item In \textbf{Solo play}: fail to meet the Victory Condition by the end of Round 13.
-  \item In \textbf{PvP games}, if both players/teams cannot pay their \textbf{tranche} in the same Round, the player/team with highest \textbf{tranche} value in remaining resources wins, with the Grail Token counting as 60 \svg{gold}.
+  \item In \textbf{PvP games}, if both players/teams cannot pay their \textbf{tranche} in the same Round, the player/team with the highest \textbf{tranche} value in remaining resources wins, with the Grail Token counting as 60 \svg{gold}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Timed Events}}
