--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -150,16 +150,18 @@ Players must pay tranches at the start of specific Rounds, as shown in the table
         & \lightcell[2]{Instead of \textbf{one} Artifact Search, you may choose Minor or Major Artifact from Resource Cards. The other Search must be from Artifact Deck.} \\
         \darkcell[1.3]{\#C1/C2 Shrine of Magic Incantation}
         & \lightcell[1.3]{Instead of searching for a Spell, you may take one \textit{View Air} Spell.} \\
-        \darkcell[2]{\#C1 Settlement} 
-        & \lightcell[2]{Combat with Neutral Units cannot be skipped*. The choosen settlement bonus is doubled**. Choose 5 (if you're first to Flag) or 2 (otherwise) artifacts from Resource Cards.} \\
+        \darkcell[2]{\#C1 Settlement}
+        & \lightcell[2]{Combat with Neutral Units cannot be skipped\textsuperscript{\hyperref[fn:combat]{*}}. The chosen settlement bonus is doubled\textsuperscript{\hyperref[fn:bonus]{**}}. Choose 5 (if you're first to Flag) or 2 (otherwise) artifacts from Resource Cards.} \\
         \darkcell[1.3]{C2 Grail}
-        & \lightcell[1.3]{Combat with Neutral Units cannot be skipped\footnotemark[1]. Take the Grail Token and lose all remaining \svgeven{movement-note}.} \\
+        & \lightcell[1.3]{Combat with Neutral Units cannot be skipped\textsuperscript{\hyperref[fn:combat]{*}}. Take the Grail Token and lose all remaining \svgeven{movement-note}.} \\
       \end{tabularx}
     \medskip
     }
-  \footnotesize{* Including Quick Combat. Bypassing without visiting the Field (such as with the \textit{Pathfinding} Ability) is still allowed.}
+  \phantomsection
+  \label{fn:combat}
+  \footnotesize{\textsuperscript{*} Including Quick Combat. Bypassing without visiting the Field (such as with the \textit{Pathfinding} Ability) is still allowed.}
 
-  \footnotesize{** For example: if you choose increasing \svg{valuables} production, you increase it by two and get 10 \svg{valuables} if you are first player to Flag this settlement. If you choose reinforcement, you may reinforce two Units.}
+  \phantomsection
+  \label{fn:bonus}
+  \footnotesize{\textsuperscript{**} For example: if you choose increasing \svg{valuables} production, you increase it by two and get 10 \svg{valuables} if you are first player to Flag this settlement. If you choose reinforcement, you may reinforce two Units.}
 \end{table*}
-
-
