--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 8 Rounds.
 \textbf{Starting Units:}
 \begin{itemize}
   \item Few of \silver\ with the lowest Recruitment cost.
-  \item 1 random Neutral \bronze\ unit.
+  \item 1 random Neutral \bronze\ Unit.
 \end{itemize}
 
 \textbf{Town Buildings:}
@@ -47,7 +47,7 @@ The game ends at the end of Round 8.
 The player with the most Victory Points (VP) wins (see Tournament Book). players also gain:
 \begin{itemize}
   \item 5VP for the first player flagging ''The Hill''
-  \item 2VP at the end of every round for the player who controls ''The Hill''
+  \item 2VP at the end of every Round for the player who controls ''The Hill''
   \item 1VP for losing a Combat against another player
 \end{itemize}
 
@@ -65,23 +65,23 @@ The player with the most Victory Points (VP) wins (see Tournament Book). players
   \item Remove ``Unexpected Reinforcements'' from the Astrologers Proclaim Deck.
   \item \azure\ Units cannot be recruited at any point of the game.
   \item Citadel cannot be built on Round 1.
-  \item The blocked field on the Center Map Tile is a Magic Spring and does not count as blocked.
-  \item All fields on Center Map Tile are visitable once per faction.
+  \item The blocked Field on the Center Map Tile is a Magic Spring and does not count as blocked.
+  \item All Fields on Center Map Tile are visitable once per Faction.
   \item Players do not lose gold for losing or retreating from any Combat.
   \item \textbf{Sanctuary:} Empower a Knowledge Statistic Card \textit{OR} gain +1 \svg{morale_positive}. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Draw 1 Card. \textit{Visitable once per Faction.}
-  \item \textit{Optional:} At the beginning of each round, roll two Attack Dice separately and apply the effect from the table below.
+  \item \textit{Optional:} At the beginning of each Round, roll two Attack Dice separately and apply the effect from the table below.
 \end{itemize}
 
 \hommtablemulticol[]{33}{
   \centering
   \medskip
-  \textbf{Battlefield Conditions}\\
+  \textbf{Battlefield Conditions}\\ 
   \medskip
 
   \begin{tabularx}{0.95\linewidth}{p{0.15\linewidth}XXXX}\\
   \darkcell[1.4]{-1/-1}
-    & \lightcell[1.4]{Dense Fog – All Ranged units gain disadvantage.}\\
+    & \lightcell[1.4]{Dense Fog – All Ranged Units gain disadvantage.}\\
   \darkcell[1.4]{-1/0}
     & \lightcell[1.4]{Raining Ash – All \svg{unit_flying-table} Units gain -2 \svg{initiative-table}.}\\
   \darkcell[1.4]{0/-1}
@@ -101,7 +101,7 @@ The player with the most Victory Points (VP) wins (see Tournament Book). players
   \end{tabularx}
 }
 \begin{itemize}
-  \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ unit you defeated.
+  \item After winning a Neutral Combat, you may sacrifice 3 \bronze\ Units to gain 1 \silver\ Unit you defeated.
   \item At the start of next turn, a defeated main Hero may gain +2 \svg{movement}, Empower any Statistic Card from their M\&M Deck AND Search (2) the \silver\ Neutral Deck.
 \end{itemize}
 
