--- a/draft-scenarios/clash/king_of_the_hill_v2.tex
+++ b/draft-scenarios/clash/king_of_the_hill_v2.tex
@@ -55,7 +55,7 @@ VPs for:
 \subsection*{\MakeUppercase{Timed Events}}
 
 \begin{itemize}
-  \item \textbf{\nth{2} Round:} Gain secondary hero for free.
+  \item \textbf{\nth{2} Round:} Gain secondary Hero for free.
   \item \textbf{\nth{3} Round:} Gain Citadel for free. If you had it, gain 1 VP.
   \item \textbf{\nth{4} Round:} Gain \silver\ dwelling for free. If you had it: gain 2 VP.
   \item \textbf{\nth{5} Round:} Gain \golden\ dwelling for free. If you had it: gain 3 VP.
@@ -69,22 +69,22 @@ VPs for:
   \item Players do not lose gold for losing or retreating from any Combat.
   \item Secondary Heroes act as Main Hero.
   \item After losing a Combat, the defeated Hero is moved to it's starting Town.
-  \item After PvP Combat, both Players gain their lost \bronze\ and \silver\ units back.
+  \item After PvP Combat, both Players gain their lost \bronze\ and \silver\ Units back.
   \item Players may \svg{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item Level VII Neutral Combat reward: Gain 20 \svg{gold}.
-  \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitabe once per faction.}
+  \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitabe once per Faction.}
   \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svgeven{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10\svg{gold}, resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Optional Rules}}
 \begin{itemize}
-  \item After winning a Neutral Combat, you may Recruit one of the defeated Neutral Units for half the recruitment \svg{gold} rounded up. (You may use only one Neutral Unit Recruited this way in a Combat.)
+  \item After winning a Neutral Combat, you may Recruit one of the defeated Neutral Units for half the recruitment \svg{gold} rounded up. (You may use only one Neutral Unit Recruited this way in a Combat.) 
   \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage-red}, it gains a \href{https://archon-studio.com/files/manuals/homm/HoMM-Stronghold-Mission-Book-Beta_EN.pdf}{Corrosion} token. That token is removed, when that Unit takes damage.
   \item Additional Trading Post actions:
 	\begin{itemize}
 	  \item You may Search (2) \svg{artifact} and \svg{hand} 6 \svg{gold} for minor, 8 for \svg{gold} or 11 for \svg{gold} for Relic.
-	  \item For 2×\textbf{x} +2  \svg{gold}, you may remove \textbf{any} card from your hand or discard (\textbf{x} is the amount of times you have used this mode).
+	  \item For 2×\textbf{x} +2  \svg{gold}, you may remove \textbf{any} Card from your hand or discard (\textbf{x} is the amount of times you have used this mode).
 	\end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
   \item In a 2-Player game when a Player gains \textbf{x} VP for controlling the Hill. That Player also has to distribute \textbf{x} \svg{damage-red} to their Units.
