--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -5,7 +5,7 @@
 
 \textbf{Author:} LAAMAKALA
 
-\textit{Once united, the great kingdoms of Aldara now stand divided. Betrayal and ambition fuel the conflict — who will forge a new order?}
+\textit{Once united, the great kingdoms of Aldara now stand divided. Betrayal and ambition fuel the conflict — who will forge a new order?}% no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 14 Rounds
@@ -49,7 +49,7 @@ In addition to the Tournament Book's ``Scoring Victory Points'' section, players
   \item 1 VP for losing a Combat against another player
   \item 1 VP for each Starting Tile Town captured - \textit{once per captured Faction}
   \item 1 VP for the Grail Token
-  \item 2 VP for winning a level VII Neutral Combat
+  \item 2 VP for winning a Level VII Neutral Combat
   \item 1 VP for every controlled Mine or Settlement on Near and Center Tiles
   \item Removed Artifacts count towards VPs
 \end{itemize}
