--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -134,8 +134,9 @@ Players must pay tranches at the start of specific Rounds, as shown in the table
   \end{tabularx}
 }
 
-\vspace*{\fill}
-\columnbreak
+\begin{center}
+  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/champion.png}}
+\end{center}
 
 \begin{center}
 
