--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -23,7 +23,7 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \bronze\ Units with the hightst Recruitment cost
+  \item A Pack of \bronze\ Units with the highest Recruitment cost
   \item A Few \silver\ Units with the lowest Recruitment cost
 \end{itemize}
 
