--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -23,8 +23,8 @@ This Scenario is played over 13 Rounds.
 
 \textbf{Starting Units:}
 \begin{itemize}
-  \item A Pack of \bronze\ Units with the highest Recruitment cost
-  \item A Few \silver\ Units with the lowest Recruitment cost
+  \item A Pack of chosen \bronze\ Units
+  \item A Few cheapest \silver\ Units
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling, Citadel
