--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -95,6 +95,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item In \textbf{PvP games}, if nobody wins after 13 Rounds, the winner is the player/team who is able to pay the highest \textbf{tranche} value with their remaining resources.
 \end{itemize}
 
+\vspace*{\fill}
 \columnbreak
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
