--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -110,6 +110,8 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 Players must pay tranches at the start of specific Rounds, as shown in the table below. After paying, \textbf{remove all Black Cubes} from every Windmill and Water Wheel on the map.
 
+\bigskip
+
 \hommtablemulticol[]{14}{
   \centering
   \medskip
