--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -108,9 +108,9 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-Players must pay tranches at the start of specific Rounds, as shown in the table below. After paying, \textbf{remove all Black Cubes} from every Windmill and Water Wheel on the map.
+Players must pay tranches at the start of specific Rounds\footnote{The transhes are paid \textbf{after} other Round-beginning effects, including receiving resources or Astrologers Card}, as shown in the table below. After paying, \textbf{remove all Black Cubes} from every Windmill and Water Wheel on the map.
 
-\bigskip
+\medskip
 
 \hommtablemulticol[]{14}{
   \centering
@@ -137,14 +137,18 @@ Players must pay tranches at the start of specific Rounds, as shown in the table
   \end{tabularx}
 }
 
+\vfill
+
 \begin{center}
-  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/champion.png}}
+  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/town_portal.png}}
 \end{center}
+
+\vfill
+
 
 \begin{center}
 
 \begin{tikzpicture}
-  \centering
   \node at (0.0, 0.0) {\includegraphics[width=0.6\linewidth]{\maps/gold_rush-solo.png}};
   \node at (1.0, -1.2) {\large{{\textbf{\textcolor{deepskyblue}{N1}}}}};
   \node at (1.27, 0.4) {\large{{\textbf{\textcolor{deepskyblue}{\#C1}}}}};
