Typo + art swap

--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -32,7 +32,7 @@ This Scenario is played over 13 Rounds.
 \textbf{Map Tile Pool:} Each player takes 2 Far (II--III) Map Tiles.
 
 \begin{center}
-  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/elemental_conflux.png}}
+  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/town_portal.png}}
 \end{center}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -108,7 +108,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Timed Events}}
 
-Players must pay tranches at the start of specific Rounds\footnote{The transhes are paid \textbf{after} other Round-beginning effects, including receiving resources or Astrologers Card}, as shown in the table below. After paying, \textbf{remove all Black Cubes} from every Windmill and Water Wheel on the map.
+Players must pay tranches at the start of specific Rounds\footnote{The tranches are paid \textbf{after} other Round-beginning effects, including receiving resources or Astrologers Card}, as shown in the table below. After paying, \textbf{remove all Black Cubes} from every Windmill and Water Wheel on the map.
 
 \medskip
 
@@ -140,7 +140,7 @@ Players must pay tranches at the start of specific Rounds\footnote{The transhes 
 \vfill
 
 \begin{center}
-  {\transparent{0.2}\includegraphics[width=0.7\linewidth, keepaspectratio]{\art/town_portal.png}}
+  {\transparent{0.2}\includegraphics[width=\linewidth, keepaspectratio]{\art/elemental_conflux.png}}
 \end{center}
 
 \vfill
@@ -157,7 +157,7 @@ Players must pay tranches at the start of specific Rounds\footnote{The transhes 
 \end{tikzpicture}
 
 \vfill
-    
+
 \begin{tikzpicture}
   \centering
   \node at (0.0, 0.0) {\includegraphics[width=0.92\linewidth]{\maps/gold_rush-1v1.png}};
@@ -178,4 +178,3 @@ Players must pay tranches at the start of specific Rounds\footnote{The transhes 
 \end{center}
 
 \end{multicols*}
-
